# DISeL

./: .gitignore  LICENSE  README.md  pyproject.toml
disel/: __init__.py  config.py  integration.py  layer.py  variant.py
examples/: README.md  eval_gsm8k.py  train_metamath.py
tests/: test_disel.py
